More slacking off

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ people:
 
 - name: Thomas Garner
   pic: 7b750a5d0b7873c1ce8fadbbff6910d4
-  position: The Other One
+  position: The Nice One
   social:
     - title: twitter
       url: //twitter.com/thomas536
