--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://thomasandkaren.us
-baseurl: /wedding
+url: https://thomas536.github.io
+baseurl: /agency-jekyll-theme
 
 # Site settings
 title: '#TKWedding'
